# plume

./: .gitignore  AGENT.md  README.md  pyproject.toml
src/plume/: __init__.py  __main__.py  batch_state.py  cli.py  client.py  config.py  discovery.py  output.py
