[project]
name = "plume"
version = "0.1.0"
description = "OCR documents with the Mistral OCR API, in realtime or batch, from the command line."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jon Edmiston", email = "jon@triumph.tech" }]
dependencies = [
    "mistralai>=1.5.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
plume = "plume.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plume"]
